LPS-40669 fix Save & Cancel buttons alignment in phone view

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -790,6 +790,10 @@ $dockbarOpenGradientStart: #0EA6F9;
 			}
 		}
 
+		.tabbable-content.taglib-form-navigator {
+			padding-bottom: 100px;
+		}
+
 		.span6 {
 			&.article-structure, &.article-template {
 				float: left;
